# fastapi_app

./: .dockerignore  .python-semantic-release.yml  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml  tasks.db
.github/workflows/: docker-build.yml  release-dockerbuild.yml  test-token.yml
app/: create_tables.py  database.py  main.py
app/auth/: auth.py
app/models/: task.py
app/routers/: tasks.py
