[project]
name = "simple-add"
version = "0.1.0"
description = "simple addition"
authors = [
    {name = "youssefheshamm",email = "youssef_hesham@aucegypt.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Add this section for semantic release
[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
version_source = "tag"
commit_version_number = true
upload_to_repository = true
upload_to_release = true
build_command = "poetry build"
dist_path = "dist/"
tag_format = "v{version}"

[tool.semantic_release.branch]
main = [
    {name = "major", min_version = "1.0.0"},
    {name = "minor", min_version = "0.1.0"},
    {name = "patch", min_version = "0.0.1"}
]

# Optional: Add this if you want to use commitizen-style commits
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"